# game-store

./: Makefile  README.md  pyproject.toml
game-store/: manage.py
game-store/apps/: urls.py
game-store/apps/management/: admin.py  api.py  models.py  serializers.py  urls.py
game-store/game-store/: asgi.py  settings.py  urls.py
game-store/utils/: actions.py  models.py  settings.py
